# pdfcpp

./: .gitignore  CMakelists.txt  README.md
cmake/: FindPodofo.cmake
doc/: document.md  font_management.md
examples/: 01_draw_text.cpp  02_draw_image.cpp  03_draw_table.cpp  04_outlines.cpp  05_draw_lines.cpp  06_draw_rectangle.cpp  07_draw_path.cpp  CMakeLists.txt  common.h  draw_image.cpp  draw_text.cpp  draw_text_fran.cpp  report.cpp
src/: CMakelists.txt  TPCorePDFReportCommon.cpp  TPCorePDFReportCommon.h  TPCoreReportGeneratorHelper.cpp  TPCoreReportGeneratorHelper.h  font.h  pdf_report.cpp  pdf_report.h  pdf_table.cpp  pdf_table.h
